FIX6:pom,app.props=>Final: Enable Java Preview Features in Docker ENTRYPOINT